# kura-training

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  VISION.md  test-results-m3k-2026-02-14.md
.beads/: issues.jsonl
api/: Cargo.toml
api/src/: auth.rs  error.rs  extract.rs  main.rs  privacy.rs  security_profile.rs  state.rs  turnstile.rs
api/src/middleware/: access_log.rs  adaptive_abuse.rs  cors.rs  https.rs  kill_switch.rs  mod.rs  rate_limit.rs  security_headers.rs  upgrade_signal.rs
api/src/routes/: account.rs  agent.rs  agent_telemetry.rs  analysis_jobs.rs  auth.rs  events.rs  health.rs  imports.rs  invite.rs  mcp_http.rs  mod.rs  projection_rules.rs  projections.rs  provider_connections.rs  security.rs  semantic.rs  system.rs
api/src/routes/agent/: event_type_policy.rs  persist_intent.rs  policy.rs  policy_kernel.rs  session_audit.rs  system_contract.rs  workflow_visualization.rs  write_preflight.rs  write_verification.rs
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/commands/: access.rs  account.rs  admin.rs  agent.rs  api.rs  auth.rs  eval.rs  event.rs  health.rs  imports.rs  mcp.rs  mod.rs  observation.rs  projection.rs  provider.rs  system.rs
core/: Cargo.toml
core/src/: auth.rs  error.rs  events.rs  lib.rs  projections.rs
datagen/: pyproject.toml
datagen/src/datagen/: __init__.py  cli.py  engine.py  exercises.py  fatigue.py  models.py  output.py  periodization.py  presets.py
datagen/src/datagen/generators/: __init__.py  body_composition.py  novel_fields.py  nutrition.py  plan.py  profile.py  recovery.py  targets.py  training.py
datagen/tests/: test_all_generators.py  test_engine.py  test_exercises.py  test_fatigue.py  test_generators.py  test_models.py  test_novel_fields.py  test_periodization.py
docker/: .env.example  .env.production.example  compose.production.yml  compose.yml
mcp/: Cargo.toml
mcp-runtime/: Cargo.toml
mcp-runtime/src/: lib.rs
mcp/src/: lib.rs  main.rs  util.rs
migrations/: 20260207000001_create_events.sql  20260208000001_security_and_index_fixes.sql  20260209000001_auth_tables.sql  20260210000001_projections_and_jobs.sql  20260211000001_worker_delete_projections.sql  20260212000001_system_config.sql  20260213000001_api_access_log.sql  20260214000001_account_deletion.sql  20260215000001_oauth_clients.sql  20260216000001_semantic_and_inference_foundation.sql  20260217000001_inference_scheduler_state.sql  20260218000001_eval_harness_runs.sql  20260219000001_population_priors.sql  20260220000001_causal_inference_telemetry.sql  20260221000001_eval_harness_causal_artifacts.sql  20260222000001_population_priors_causal_projection_type.sql  20260223000001_app_writer_background_jobs.sql  20260224000001_external_import_jobs.sql  (+23 more)
workers/: Dockerfile  pyproject.toml
workers/src/kura_workers/: capability_estimation_runtime.py  capability_estimation_v1.py  capability_eval_gate_v1.py  causal_estimand_registry_v2.py  causal_inference.py  config.py  consistency_inbox.py  consistency_inbox_protocol.py  embeddings.py  eval_cli.py  eval_harness.py  event_conventions.py  external_activity_contract.py  external_adapter.py  external_identity.py  external_import_error_taxonomy.py  external_import_mapping_profiles_v2.py  external_import_mapping_v2.py  external_import_pipeline.py  external_mapping_matrix.py  extraction_calibration.py  health.py  inference_engine.py  inference_event_registry.py  inference_telemetry.py  interview_guide.py  issue_clustering.py  learning_backlog_bridge.py  learning_telemetry.py  logging.py  main.py  metrics.py  objective_advisory_v1.py  objective_contract_v1.py  objective_statistical_contract_v1.py  performance_gate.py  population_priors.py  query_builder.py  readiness_signals.py  recovery_daily_checkin.py  (+25 more)
workers/src/kura_workers/handlers/: __init__.py  account_lifecycle.py  body_composition.py  capability_estimation.py  causal_inference.py  consistency_inbox.py  custom_projection.py  deep_analysis.py  exercise_progression.py  external_import.py  inference_nightly.py  log_retention.py  nutrition.py  objective_advisory.py  objective_state.py  open_observations.py  quality_health.py  readiness_inference.py  recovery.py  router.py  semantic_memory.py  session_feedback.py  strength_inference.py  supplements.py  training_plan.py  training_timeline.py  user_profile.py
workers/tests/: conftest.py  test_account_lifecycle.py  test_anomaly_detection.py  test_architecture_specs.py  test_body_composition.py  test_capability_estimation_runtime.py  test_causal_inference.py  test_consistency_inbox.py  test_contract_consistency.py  test_custom_projection.py  test_deep_analysis.py  test_embeddings.py  test_eval_harness.py  test_exercise_progression.py  test_external_activity_contract.py  test_external_adapter.py  test_external_identity.py  test_external_import_error_taxonomy.py  test_external_import_mapping_v2.py  test_external_import_pipeline.py  test_external_mapping_matrix.py  test_extraction_calibration.py  test_inference_engine.py  test_inference_telemetry.py  test_integration.py  test_interview_guide.py  test_issue_clustering.py  test_learning_backlog_bridge.py  test_learning_telemetry.py  test_nutrition.py  test_open_observations.py  test_performance_gate.py  test_population_priors.py  test_quality_health.py  test_query_builder.py  test_readiness_signals.py  test_recovery.py  test_recovery_daily_checkin.py  test_registry.py  test_repair_provenance.py  (+24 more)
workers/tests/fixtures/external_import_mapping_v2/: cycling_trainingpeaks.json  hybrid_strava_brick.json  running_garmin.json  strength_garmin_sets.json
workers/tests/fuzzing/: __init__.py  assertions.py  conftest.py  contracts.py  generator.py  runner.py  scenarios.py  strategies.py  test_advanced_invariants.py  test_core_invariants.py  test_fixtures.py  test_scenarios.py  transcript.py
workers/tests/fuzzing/fixtures/: __init__.py  certainty_contract_edge_cases.json  locale_decimal_variants.json  realistic_edge_cases.json  realistic_general_and_rehab.json  realistic_strength_sports.json  retraction_correction_edge_cases.json
(+296 files in other folders)
