[workspace]
members = ["api", "cli", "core", "mcp", "mcp-runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/jonzim-cmd/kura-training"
homepage = "https://withkura.com"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }

# Config
dotenvy = "0.15"

# Auth / Crypto
argon2 = "0.5"
password-hash = "0.5"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Rate limiting
tower_governor = "0.8"
governor = "0.10"

# URL handling
url = "2"

# String similarity
strsim = "0.11"
regex = "1"

# CLI extras
open = "5"
dirs = "6"

# Shared crate
kura-core = { version = "0.1.0", path = "core" }
kura-mcp-runtime = { version = "0.1.0", path = "mcp-runtime" }
