[package]
name = "kura-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kura-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
strsim = { workspace = true }
