[package]
name = "kura-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kura"
path = "src/main.rs"

[dependencies]
kura-core = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
