[package]
name = "kura-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kura"
path = "src/main.rs"

[dependencies]
kura-core = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
open = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
