[package]
name = "kura-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared core types and auth utilities for Kura services and tools."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
