[project]
name = "kura-datagen"
version = "0.1.0"
description = "Synthetic training data generator for Kura"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
]

[project.scripts]
datagen = "datagen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datagen"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
