[package]
name = "kura-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone MCP server binary for Kura."

[[bin]]
name = "kura-mcp"
path = "src/main.rs"

[dependencies]
kura-mcp-runtime = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
