[project]
name = "kura-workers"
version = "0.1.0"
description = "Background workers for Kura Training projections"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kura_workers"]

[project.scripts]
kura-worker = "kura_workers.main:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
